--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ In 2016, the pop song "Selfie Pulla" which Vijay had recorded in 2014 became pop
   <h2 style="color: rgb(186, 5, 123); ;">MOVIES</h2><img src="thupakki.jpg" width="250" height="365px"><img src="kathi.jpg" height="365px"><img src="mersal.jpg" height="365px" width="250px"><img src="sarkar.jpg" width="250px" height="365px">
  <hr>
  <h2 style="color:  rgb(186, 5, 123);;">SONGS</h2>
- <img src="vaadi.jpg" width="475px" height="280px"><img src="selfi.jpg" height="280px"><img src="chella.jpg" width="475px" height="280px"><img src="yendi.jpg" width="475px" height="280px"><img src="joly.jpg" width="475px" height="280px"><img src="verithanam.webp" width="475px" height="280px">
+ <a href="https://youtu.be/d8DKbrYUbFA?si=E6k7yq5D6d7P9xk3"><img src="vaadi.jpg" width="475px" height="280px"></a><a href="https://youtu.be/xZ92nnR1Pt8?si=VsRpTScmJzYyjg2a"><img src="selfi.jpg" height="280px"></a><a href="https://youtu.be/RPTfXa_4jPg?si=x0aoTdxFC_jFwY7j"><img src="chella.jpg" width="475px" height="280px"></a><a href="https://youtu.be/oL4SC97QBoU?si=al0i5SDMyyixDSqb"><img src="yendi.jpg" width="475px" height="280px"></a><a href="https://youtu.be/PhxfspwMdww?si=Ui1u1ifLHt7nDksg"><img src="joly.jpg" width="475px" height="280px"></a><a href="https://youtu.be/rtd_VveAEaI?si=zNf-rvU8PwmxIn6z"><img src="verithanam.webp" width="475px" height="280px"></a>
 </section>
 <hr>
 </body>
